@@ -132,8 +132,6 @@ public:
                 return window_viewport_open();
             case WC_WATER:
                 return window_water_open();
-            case WC_NETWORK:
-                return window_network_open();
             default:
                 Console::Error::WriteLine("Unhandled window class (%d)", wc);
                 return nullptr;
