@@ -3746,19 +3746,6 @@ enum
     STR_CHAT_BUTTON_ON_TOOLBAR = 6282,
     STR_CHAT_UNAVAILABLE = 6283,
 
-    STR_NETWORK = 6284,
-    STR_NETWORK_INFORMATION_TITLE = 6285,
-
-    STR_NETWORK_RECEIVE = 6286,
-    STR_NETWORK_SEND = 6287,
-
-    STR_NETWORK_TOTAL_RECEIVED = 6288,
-    STR_NETWORK_TOTAL_SENT = 6289,
-
-    STR_NETWORK_LEGEND_BASE = 6290,
-    STR_NETWORK_LEGEND_COMMANDS = 6291,
-    STR_NETWORK_LEGEND_MAPDATA = 6292,
-
     STR_SIZE_BYTE = 6293,
     STR_SIZE_KILOBYTE = 6294,
     STR_SIZE_MEGABYTE = 6295,
