@@ -61,6 +61,7 @@
 - Improved: [#12917] Changed peep movement so that they stay more spread out over the full width of single tile paths.
 - Improved: [#13386] A GUI error message is now displayed if the language files are missing.
 - Removed: [#13423] Built-in explode guests cheat (replaced by plug-in).
+- Removed: [#14186] Network traffic window (replaced by plug-in).
 
 0.3.2 (2020-11-01)
 ------------------------------------------------------------------------
